--- a/gallery.html
+++ b/gallery.html
@@ -306,9 +306,9 @@
         <div class="row portfolio-container">
             <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
                 <div class="position-relative rounded overflow-hidden mb-2">
-                    <img class="img-fluid w-100" src="img/IMG16.png" alt="">
+                    <img class="img-fluid w-100" src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG16.png" alt="">
                     <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                        <a href="img/IMG16.png" data-lightbox="portfolio">
+                        <a href="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG16.png" data-lightbox="portfolio">
                             <i class="fa fa-4x fa-plus text-primary"></i>
                         </a>
                     </div>
@@ -318,7 +318,7 @@
                 <div class="position-relative rounded overflow-hidden mb-2">
                     <img class="img-fluid w-100" src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG17.jpg" alt="">
                     <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                        <a href="img/IMG17.JPG" data-lightbox="portfolio">
+                        <a href="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG17.JPG" data-lightbox="portfolio">
                             <i class="fa fa-4x fa-plus text-primary"></i>
                         </a>
                     </div>
@@ -328,7 +328,7 @@
                 <div class="position-relative rounded overflow-hidden mb-2">
                     <img class="img-fluid w-100" src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG18.jpg" alt="">
                     <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                        <a href="img/IMG18.JPG" data-lightbox="portfolio">
+                        <a href="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG18.JPG" data-lightbox="portfolio">
                             <i class="fa fa-4x fa-plus text-primary"></i>
                         </a>
                     </div>
@@ -338,7 +338,7 @@
                 <div class="position-relative rounded overflow-hidden mb-2">
                     <img class="img-fluid w-100" src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG19.jpg" alt="">
                     <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                        <a href="img/IMG19.JPG" data-lightbox="portfolio">
+                        <a href="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG19.JPG" data-lightbox="portfolio">
                             <i class="fa fa-4x fa-plus text-primary"></i>
                         </a>
                     </div>
@@ -346,9 +346,9 @@
             </div>
             <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
                 <div class="position-relative rounded overflow-hidden mb-2">
-                    <img class="img-fluid w-100" src="img/IMG20.JPG"alt="">
+                    <img class="img-fluid w-100" src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG20.JPG"alt="">
                     <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                        <a href="img/IMG20.JPG"data-lightbox="portfolio">
+                        <a href="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG20.JPG"data-lightbox="portfolio">
                             <i class="fa fa-4x fa-plus text-primary"></i>
                         </a>
                     </div>
@@ -356,9 +356,9 @@
             </div>
             <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
                 <div class="position-relative rounded overflow-hidden mb-2">
-                    <img class="img-fluid w-100" src="img/IMG21.jpg" alt="">
+                    <img class="img-fluid w-100" src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG21.jpg" alt="">
                     <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                        <a href="img/IMG21.jpg" data-lightbox="portfolio">
+                        <a href="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG21.jpg" data-lightbox="portfolio">
                             <i class="fa fa-4x fa-plus text-primary"></i>
                         </a>
                     </div>
@@ -366,9 +366,9 @@
             </div>
             <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
                 <div class="position-relative rounded overflow-hidden mb-2">
-                    <img class="img-fluid w-100" src="img/IMG22.JPG" alt="">
+                    <img class="img-fluid w-100" src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG22.JPG" alt="">
                     <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                        <a href="img/IMG22.JPG" data-lightbox="portfolio">
+                        <a href="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG22.JPG" data-lightbox="portfolio">
                             <i class="fa fa-4x fa-plus text-primary"></i>
                         </a>
                     </div>
@@ -376,9 +376,9 @@
             </div>
             <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
                 <div class="position-relative rounded overflow-hidden mb-2">
-                    <img class="img-fluid w-100" src="img/IMG23.JPG" alt="">
+                    <img class="img-fluid w-100" src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG23.JPG" alt="">
                     <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                        <a href="img/IMG23.JPG" data-lightbox="portfolio">
+                        <a href="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG23.JPG" data-lightbox="portfolio">
                             <i class="fa fa-4x fa-plus text-primary"></i>
                         </a>
                     </div>
@@ -386,9 +386,9 @@
             </div>
             <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
                 <div class="position-relative rounded overflow-hidden mb-2">
-                    <img class="img-fluid w-100" src="img/IMG24.JPG" alt="">
+                    <img class="img-fluid w-100" src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG24.JPG" alt="">
                     <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                        <a href="img/IMG24.JPG" data-lightbox="portfolio">
+                        <a href="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG24.JPG" data-lightbox="portfolio">
                             <i class="fa fa-4x fa-plus text-primary"></i>
                         </a>
                     </div>
@@ -396,9 +396,9 @@
             </div>
             <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
                 <div class="position-relative rounded overflow-hidden mb-2">
-                    <img class="img-fluid w-100" src="img/IMG25.JPG" alt="">
+                    <img class="img-fluid w-100" src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG25.JPG" alt="">
                     <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                        <a href="img/IMG25.JPG" data-lightbox="portfolio">
+                        <a href="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG25.JPG" data-lightbox="portfolio">
                             <i class="fa fa-4x fa-plus text-primary"></i>
                         </a>
                     </div>
@@ -406,9 +406,9 @@
             </div>
             <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
                 <div class="position-relative rounded overflow-hidden mb-2">
-                    <img class="img-fluid w-100" src="img/IMG26.JPG" alt="">
+                    <img class="img-fluid w-100" src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG26.JPG" alt="">
                     <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                        <a href="img/IMG26.JPG" data-lightbox="portfolio">
+                        <a href="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG26.JPG" data-lightbox="portfolio">
                             <i class="fa fa-4x fa-plus text-primary"></i>
                         </a>
                     </div>
@@ -416,9 +416,9 @@
             </div>
             <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
                 <div class="position-relative rounded overflow-hidden mb-2">
-                    <img class="img-fluid w-100" src="img/IMG27.JPG" alt="">
+                    <img class="img-fluid w-100" src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG27.JPG" alt="">
                     <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                        <a href="img/IMG27.JPG" data-lightbox="portfolio">
+                        <a href="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG27.JPG" data-lightbox="portfolio">
                             <i class="fa fa-4x fa-plus text-primary"></i>
                         </a>
                     </div>
