--- a/testimonials.html
+++ b/testimonials.html
@@ -148,9 +148,19 @@
                         </div>
                         <div class="testimonial-text">
                             <img src="img/BLACKK.gif" alt="Image">
-                            <a href="vid/t1.mp4" class="play-btn video-popup">
-                                <i class="fa fa-play"></i>
+                            <a id="openModal2" class="play-btn video-popup" style="cursor: pointer;">
+                                <i class="fa fa-play" style="color: #FDBE33;"></i>
                             </a>
+                        </div>
+
+                        <div id="myModal2" class="modal">
+                            <div class="modal-content">
+                                <span class="closeVid" style="color: grey;">&times;</span>
+                                <video id="myVideo2" width="100%" controls>
+                                    <source src="vid/t1.mp4" type="video/mp4">
+                                    Your browser does not support the video tag.
+                                </video>
+                            </div>
                         </div>
                     </div>
                     <div class="testimonial-item">
@@ -230,10 +240,10 @@
         <script src="js/main.js"></script>
         <script>
 
-            // Video 1
+                        // Video 1
             var modal1 = document.getElementById("myModal1");
             var btn1 = document.getElementById("openModal1");
-            var span1 = document.getElementsByClassName("closeVid")[0];
+            var span1 = modal1.getElementsByClassName("closeVid")[0];
             var video1 = document.getElementById("myVideo1");
 
             btn1.onclick = function() {
@@ -254,6 +264,32 @@
                     video1.currentTime = 0;
                 }
             }
+
+            // Video 2
+            var modal2 = document.getElementById("myModal2");
+            var btn2 = document.getElementById("openModal2");
+            var span2 = modal2.getElementsByClassName("closeVid")[0];
+            var video2 = document.getElementById("myVideo2");
+
+            btn2.onclick = function() {
+                modal2.style.display = "block";
+                video2.play();
+            }
+
+            span2.onclick = function() {
+                modal2.style.display = "none";
+                video2.pause();
+                video2.currentTime = 0;
+            }
+
+            window.onclick = function(event) {
+                if (event.target == modal2) {
+                    modal2.style.display = "none";
+                    video2.pause();
+                    video2.currentTime = 0;
+                }
+            }
+
 
         </script>
 
