--- a/donationjourney.html
+++ b/donationjourney.html
@@ -128,7 +128,7 @@
                       <span class="flag"><Strong><span style="color: #4a4c70;"> Step Two </span></Strong></span>
                       <span class="time-wrapper"><span class="time">DONATE</span></span>
                     </div>
-                    <div class="desc1">Click on the donate button to complete the form.</div>
+                    <div class="desc">Click on the donate button to complete the form.</div>
                   </div>
                 </li>
                 
@@ -153,7 +153,7 @@
                       <span class="flag"><Strong><span style="color: #4a4c70;"> Step Four </span></Strong></span>
                       <span class="time-wrapper"><span class="time">PAYMENT</span></span>
                     </div>
-                    <div class="desc1"><p>Once the payment is made, please  email the POP to 20from20@tut.ac.za </p></div>
+                    <div class="desc"><p>Once the payment is made, please  email the POP to 20from20@tut.ac.za </p></div>
                  
                   </div>
                 </li>
