--- a/gallery.html
+++ b/gallery.html
@@ -102,9 +102,9 @@
             <div class="row portfolio-container">
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
                     <div class="position-relative rounded overflow-hidden mb-2">
-                        <img class="img-fluid w-100" src="img/IMG1.JPG" alt="">
+                        <img class="img-fluid w-100" src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG1.JPG" alt="">
                         <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                            <a href="img/IMG1.JPG" data-lightbox="portfolio">
+                            <a href="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG1.JPG" data-lightbox="portfolio">
                                 <i class="fa fa-4x fa-plus text-primary"></i>
                             </a>
                         </div>
@@ -112,9 +112,9 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
                     <div class="position-relative rounded overflow-hidden mb-2">
-                        <img class="img-fluid w-100" src="img/IMG2.JPG" alt="">
+                        <img class="img-fluid w-100" src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG2.JPG" alt="">
                         <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                            <a href="img/IMG2.JPG" data-lightbox="portfolio">
+                            <a href="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG2.JPG" data-lightbox="portfolio">
                                 <i class="fa fa-4x fa-plus text-primary"></i>
                             </a>
                         </div>
@@ -122,9 +122,9 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
                     <div class="position-relative rounded overflow-hidden mb-2">
-                        <img class="img-fluid w-100" src="img/IMG3.JPG" alt="">
+                        <img class="img-fluid w-100" src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG3.JPG" alt="">
                         <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                            <a href="img/IMG3.JPG" data-lightbox="portfolio">
+                            <a href="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG3.JPG" data-lightbox="portfolio">
                                 <i class="fa fa-4x fa-plus text-primary"></i>
                             </a>
                         </div>
@@ -132,9 +132,9 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
                     <div class="position-relative rounded overflow-hidden mb-2">
-                        <img class="img-fluid w-100" src="img/IMG4.JPG" alt="">
+                        <img class="img-fluid w-100" src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG4.JPG" alt="">
                         <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                            <a href="img/IMG4.JPG" data-lightbox="portfolio">
+                            <a href="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG4.JPG" data-lightbox="portfolio">
                                 <i class="fa fa-4x fa-plus text-primary"></i>
                             </a>
                         </div>
@@ -142,9 +142,9 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
                     <div class="position-relative rounded overflow-hidden mb-2">
-                        <img class="img-fluid w-100" src="img/IMG5.JPG"alt="">
+                        <img class="img-fluid w-100" src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG5.JPG"alt="">
                         <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                            <a href="img/IMG5.JPG"data-lightbox="portfolio">
+                            <a href="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG5.JPG"data-lightbox="portfolio">
                                 <i class="fa fa-4x fa-plus text-primary"></i>
                             </a>
                         </div>
@@ -152,9 +152,9 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
                     <div class="position-relative rounded overflow-hidden mb-2">
-                        <img class="img-fluid w-100" src="img/IMG6.JPG" alt="">
+                        <img class="img-fluid w-100" src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG6.JPG" alt="">
                         <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                            <a href="img/IMG6.JPG" data-lightbox="portfolio">
+                            <a href="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG6.JPG" data-lightbox="portfolio">
                                 <i class="fa fa-4x fa-plus text-primary"></i>
                             </a>
                         </div>
@@ -162,9 +162,9 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
                     <div class="position-relative rounded overflow-hidden mb-2">
-                        <img class="img-fluid w-100" src="img/IMG7.JPG" alt="">
+                        <img class="img-fluid w-100" src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG7.JPG" alt="">
                         <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                            <a href="img/IMG7.JPG" data-lightbox="portfolio">
+                            <a href="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG7.JPG" data-lightbox="portfolio">
                                 <i class="fa fa-4x fa-plus text-primary"></i>
                             </a>
                         </div>
@@ -172,9 +172,9 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
                     <div class="position-relative rounded overflow-hidden mb-2">
-                        <img class="img-fluid w-100" src="img/IMG8.JPG" alt="">
+                        <img class="img-fluid w-100" src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG8.JPG" alt="">
                         <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                            <a href="img/IMG8.JPG" data-lightbox="portfolio">
+                            <a href="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG8.JPG" data-lightbox="portfolio">
                                 <i class="fa fa-4x fa-plus text-primary"></i>
                             </a>
                         </div>
@@ -182,9 +182,9 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
                     <div class="position-relative rounded overflow-hidden mb-2">
-                        <img class="img-fluid w-100" src="img/IMG9.JPG" alt="">
+                        <img class="img-fluid w-100" src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG9.JPG" alt="">
                         <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                            <a href="img/IMG9.JPG" data-lightbox="portfolio">
+                            <a href="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG9.JPG" data-lightbox="portfolio">
                                 <i class="fa fa-4x fa-plus text-primary"></i>
                             </a>
                         </div>
@@ -205,9 +205,9 @@
             <div class="row portfolio-container">
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
                     <div class="position-relative rounded overflow-hidden mb-2">
-                        <img class="img-fluid w-100" src="img/IMG10.JPG" alt="">
+                        <img class="img-fluid w-100" src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG10.JPG" alt="">
                         <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                            <a href="img/IMG10.JPG" data-lightbox="portfolio">
+                            <a href="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG10.JPG" data-lightbox="portfolio">
                                 <i class="fa fa-4x fa-plus text-primary"></i>
                             </a>
                         </div>
@@ -215,9 +215,9 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
                     <div class="position-relative rounded overflow-hidden mb-2">
-                        <img class="img-fluid w-100" src="img/IMG11.JPG" alt="">
+                        <img class="img-fluid w-100" src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG11.JPG" alt="">
                         <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                            <a href="img/IMG11.JPG" data-lightbox="portfolio">
+                            <a href="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG11.JPG" data-lightbox="portfolio">
                                 <i class="fa fa-4x fa-plus text-primary"></i>
                             </a>
                         </div>
@@ -225,9 +225,9 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
                     <div class="position-relative rounded overflow-hidden mb-2">
-                        <img class="img-fluid w-100" src="img/IMG-12.JPG" alt="">
+                        <img class="img-fluid w-100" src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG-12.JPG" alt="">
                         <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                            <a href="img/IMG-12.JPG" data-lightbox="portfolio">
+                            <a href="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG-12.JPG" data-lightbox="portfolio">
                                 <i class="fa fa-4x fa-plus text-primary"></i>
                             </a>
                         </div>
@@ -235,9 +235,9 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
                     <div class="position-relative rounded overflow-hidden mb-2">
-                        <img class="img-fluid w-100" src="img/IMG13.JPG" alt="">
+                        <img class="img-fluid w-100" src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG13.JPG" alt="">
                         <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                            <a href="img/IMG13.JPG" data-lightbox="portfolio">
+                            <a href="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG13.JPG" data-lightbox="portfolio">
                                 <i class="fa fa-4x fa-plus text-primary"></i>
                             </a>
                         </div>
@@ -245,9 +245,9 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item first">
                     <div class="position-relative rounded overflow-hidden mb-2">
-                        <img class="img-fluid w-100" src="img/IMG14.JPG"alt="">
+                        <img class="img-fluid w-100" src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG14.JPG"alt="">
                         <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                            <a href="img/IMG14.JPG"data-lightbox="portfolio">
+                            <a href="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG14.JPG"data-lightbox="portfolio">
                                 <i class="fa fa-4x fa-plus text-primary"></i>
                             </a>
                         </div>
@@ -255,9 +255,9 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
                     <div class="position-relative rounded overflow-hidden mb-2">
-                        <img class="img-fluid w-100" src="img/IMG-15.JPG" alt="">
+                        <img class="img-fluid w-100" src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG-15.JPG" alt="">
                         <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                            <a href="img/IMG-15.JPG" data-lightbox="portfolio">
+                            <a href="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG-15.JPG" data-lightbox="portfolio">
                                 <i class="fa fa-4x fa-plus text-primary"></i>
                             </a>
                         </div>
@@ -266,9 +266,9 @@
 
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
                     <div class="position-relative rounded overflow-hidden mb-2">
-                        <img class="img-fluid w-100" src="img/IMG28.JPG" alt="">
+                        <img class="img-fluid w-100" src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG28.JPG" alt="">
                         <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                            <a href="img/IMG13.JPG" data-lightbox="portfolio">
+                            <a href="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG13.JPG" data-lightbox="portfolio">
                                 <i class="fa fa-4x fa-plus text-primary"></i>
                             </a>
                         </div>
@@ -276,9 +276,9 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
                     <div class="position-relative rounded overflow-hidden mb-2">
-                        <img class="img-fluid w-100" src="img/IMG29.JPG" alt="">
+                        <img class="img-fluid w-100" src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG29.JPG" alt="">
                         <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                            <a href="img/IMG13.JPG" data-lightbox="portfolio">
+                            <a href="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG13.JPG" data-lightbox="portfolio">
                                 <i class="fa fa-4x fa-plus text-primary"></i>
                             </a>
                         </div>
@@ -286,9 +286,9 @@
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4 portfolio-item second">
                     <div class="position-relative rounded overflow-hidden mb-2">
-                        <img class="img-fluid w-100" src="img/IMG30.JPG" alt="">
+                        <img class="img-fluid w-100" src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG30.JPG" alt="">
                         <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                            <a href="img/IMG13.JPG" data-lightbox="portfolio">
+                            <a href="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG13.JPG" data-lightbox="portfolio">
                                 <i class="fa fa-4x fa-plus text-primary"></i>
                             </a>
                         </div>
