--- a/testimonials.html
+++ b/testimonials.html
@@ -97,7 +97,7 @@
                             </div>
                         </div>
                         <div class="testimonial-text">
-                            <img src="img/testimonial2.PNG" alt="Image">
+                            <img src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/testimonial2.PNG" alt="Image">
                         </div>
                     </div>
 
@@ -120,7 +120,7 @@
                             <div class="modal-content">
                                 <span class="closeVid">&times;</span>
                                 <video id="myVideo1" width="100%" controls>
-                                    <source src="vid/tvh testimonial.mp4" type="video/mp4">
+                                    <source src="https://s3.eu-west-1.amazonaws.com/20from20.org/vid/tvh testimonial.mp4" type="video/mp4">
                                     Your browser does not support the video tag.
                                 </video>
                             </div>
@@ -135,7 +135,7 @@
                             </div>
                         </div>
                         <div class="testimonial-text">
-                            <img src="img/testimonial1.PNG" alt="Image">
+                            <img src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/testimonial1.PNG" alt="Image">
                         </div>
                     </div>
                     <div class="testimonial-item">
@@ -157,7 +157,7 @@
                             <div class="modal-content">
                                 <span class="closeVid" style="color: grey;">&times;</span>
                                 <video id="myVideo2" width="100%" controls>
-                                    <source src="vid/t1.mp4" type="video/mp4">
+                                    <source src="https://s3.eu-west-1.amazonaws.com/20from20.org/vid/t1.mp4" type="video/mp4">
                                     Your browser does not support the video tag.
                                 </video>
                             </div>
@@ -172,7 +172,7 @@
                             </div>
                         </div>
                         <div class="testimonial-text">
-                            <img src="img/IMG12.JPG" alt="Image">
+                            <img src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/IMG12.JPG" alt="Image">
                         </div>
                     </div>
 
