--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
                                             <div class="modal-content">
                                                 <span class="closeVid">&times;</span>
                                                 <video id="myVideo" width="100%" controls>
-                                                    <source src="https://s3.eu-west-1.amazonaws.com/20from20.org/vid/phumla.mp4" type="video/mp4">
+                                                    <source src="vid/phumla.mp4" type="video/mp4">
                                                     Your browser does not support the video tag.
                                                 </video>
                                             </div>
