--- a/ndumoVideo.html
+++ b/ndumoVideo.html
@@ -128,7 +128,7 @@
                 <div class="container-fluid h-100">
                     <div class="row h-100 align-items-center">
                      <video class="background-video" autoplay loop>
-                            <source src="https://s3.eu-west-1.amazonaws.com/20from20.org/vid/NdumoVideo.mp4" type="video/mp4" />
+                            <source src="vid/NdumoVideo.mp4" type="video/mp4" />
                             Your browser does not support the video tag.
                         </video> 
                     </div>
