--- a/testimonials.html
+++ b/testimonials.html
@@ -120,7 +120,7 @@
                             <div class="modal-content">
                                 <span class="closeVid">&times;</span>
                                 <video id="myVideo1" width="100%" controls>
-                                    <source src="https://s3.eu-west-1.amazonaws.com/20from20.org/vid/tvh testimonial.mp4" type="video/mp4">
+                                    <source src="vid/tvh testimonial.mp4" type="video/mp4">
                                     Your browser does not support the video tag.
                                 </video>
                             </div>
@@ -157,7 +157,7 @@
                             <div class="modal-content">
                                 <span class="closeVid" style="color: grey;">&times;</span>
                                 <video id="myVideo2" width="100%" controls>
-                                    <source src="https://s3.eu-west-1.amazonaws.com/20from20.org/vid/t1.mp4" type="video/mp4">
+                                    <source src="20from20.org/vid/t1.mp4" type="video/mp4">
                                     Your browser does not support the video tag.
                                 </video>
                             </div>
