--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     </div>
                     <div class="carousel-item">
                         <div class="carousel-img">
-                            <img src="img/IMG15.jpg" alt="Image">
+                            <img src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/carousel-3_edited.jpg" alt="Image">
                         </div>
                         <div class="carousel-text">
                             <h1>Grade R Centre of Excellence</h1>
