--- a/donationjourney.html
+++ b/donationjourney.html
@@ -234,7 +234,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-contact">
                             <h2>Where To Find Us</h2>
-                            <p><i class="fa fa-map-marker-alt"></i>Advancement and partnerships Office, Dinokeng Building , Floor 2</p>
+                            <p><i class="fa fa-map-marker-alt"></i>Advancement and Partnerships Office, Dinokeng Building , Floor 2</p>
                             <p><i class="fa fa-phone-alt"></i>+27 12 382 4755</p>
                             <p><i class="fa fa-envelope"></i>20from20@tut.ac.za </p>
                             <p><i>Urgent enquries: 076 607 9488 - Ms Phumla Msibi</i> </p>
