--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
 <div class="service">
     <div class="container">
         <div class="section-header text-center">
-          <section  id = "about" style="padding-top: 60px; margin-top: -60px;">
+          <section  id = "about1" style="padding-top: 60px; margin-top: -60px;">
               <div class="about">
                      <div class="container">
                              <div class="row align-items-center">
