Fixed mogau's name

--- a/team.html
+++ b/team.html
@@ -296,7 +296,7 @@
                             <div class="testimonial-profile">
                                 
                                 <div class="testimonial-name">
-                                    <h3>Mohau Rakolota</h3>
+                                    <h3>Mogau Rakolota</h3>
                                     <p>Software Tester</p>
                                 </div>
                             </div>
