--- a/donationjourney.html
+++ b/donationjourney.html
@@ -263,7 +263,7 @@
                         </div>
                     </div>
                 -->
-
+                <p style="color: white;"><i>Developed by Tshwane University of Technology Final Year Student.<a href="img/Project X.pdf"> Learn More</a></i></p>
                 </div>
             </div>
            
