--- a/gallery.html
+++ b/gallery.html
@@ -474,6 +474,7 @@
                         <a href="gallery.html">Donate</a>  
                     </div>
                 </div>
+                <p style="color: white;"><i>Developed by Tshwane University of Technology Final Year Student.<a href="img/Project X.pdf"> Learn More</a></i></p>
             </div>
         </div>
     </div>
