--- a/grade-r-excellence.html
+++ b/grade-r-excellence.html
@@ -151,7 +151,7 @@
                         </div>
                     </div>
                 -->
-
+                <p style="color: white;"><i>Developed by Tshwane University of Technology Final Year Student.<a href="img/Project X.pdf"> Learn More</a></i></p>
                 </div>
             </div>
            
