--- a/hackathon.html
+++ b/hackathon.html
@@ -161,8 +161,9 @@
                         </div>
                     </div>
                 -->
-
+                <p style="color: white;"><i>Developed by Tshwane University of Technology Final Year Student.<a href="img/Project X.pdf"> Learn More</a></i></p>
                 </div>
+                
             </div>
            
         </div>
