--- a/testimonials.html
+++ b/testimonials.html
@@ -209,6 +209,7 @@
                             <a href="donationjourney.html">Donate</a> 
                         </div>
                     </div>
+                    <p style="color: white;"><i>Developed by Tshwane University of Technology Final Year Student.<a href="img/Project X.pdf"> Learn More</a></i></p>
                 </div>
             </div>
 
