--- a/team.html
+++ b/team.html
@@ -400,7 +400,7 @@
                         </div>
                     </div>
                 -->
-                <p style="color: white;"><i>Developed by Tshwane University of Technology Final Year Student.<a href="img/Project X.pdf"> Learn More</a></i></p>
+                <p style="color: white;"><i>Developed by Tshwane University of Technology Final Year Student.<a href="img/Team Profiles.pdf"> Learn More</a></i></p>
                 </div>
             </div>
            
