--- a/gallery.html
+++ b/gallery.html
@@ -41,7 +41,7 @@
             <!-- Nav Bar Start -->
             <div class="navbar navbar-expand-lg bg-light navbar-light">
                 <div class="container-fluid">
-                    <img src="img/Picture1.png" class="navbar-brand">
+                    <img src="img/Landscape_CMYK---bg.png" class="navbar-brand">
                     <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -474,6 +474,7 @@
                         <a href="gallery.html">Donate</a>  
                     </div>
                 </div>
+                <p style="color: white;"><i>This website was created by a group of final year TUT students, click <a href="" style="color: #FDBE33;">here</a> to learn more.</i></p>
             </div>
         </div>
     </div>
