Fixed mogau's name

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                         <div class="facts-item">                         
                             <div class="facts-text">
                                 <h3 class="" data-toggle="counter-up">60</h3>
-                                <p>Sponsors</p>
+                                <p>Donors</p>
                                 <i class="flaticon-charity"></i>
                             </div>
                         </div>
