--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <!-- Nav Bar Start -->
         <div class="navbar navbar-expand-lg bg-light navbar-light">
             <div class="container-fluid">
-                <img src="img/Landscape_CMYK---bg.png" class="navbar-brand">
+                <img src="img/Landscape_CMYK---bg_edited.jpg" class="navbar-brand">
                     <!-- <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                         <span class="navbar-toggler-icon"></span>
                     </button> -->
@@ -568,10 +568,10 @@
                             <img src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/event-1.jpg" alt="Image">
                             <div class="event-content">
                                 <div class="event-meta">
-                                    <p><i class="fa fa-calendar-alt"></i>18 - 20 October 2024</p>
-                                    <p><i class="far fa-clock"></i>08:00 - 14:00</p>
-                                    <p><i class="fa fa-map-marker-alt"></i>TB Hall (TUT<br> 
-                                         Pretoria west Campus)</p>
+                                    <p><i class="fa fa-calendar-alt"></i><i>18 - 20 October 2024</p></i>
+                                    <p><i class="far fa-clock"></i><i>08:00 - 14:00</p></i>
+                                    <p><i class="fa fa-map-marker-alt"></i><i>TB Hall (TUT 
+                                         Pretoria <br>west Campus)</p></i>
                                 </div>
                                 <div class="event-text">
                                     <h3>Intervarsity Hackathon Series</h3>
@@ -587,9 +587,9 @@
                             <img src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/event-2_edited.jpg" alt="Image">
                             <div class="event-content">
                                 <div class="event-meta">
-                                    <p><i class="fa fa-calendar-alt"></i>25 - 29 November 2024</p>
-                                    <p><i class="far fa-clock"></i>10:00 - 13:00</p>
-                                    <p><i class="fa fa-map-marker-alt"></i>Ndumo Game <br> Reserve,KZN</p>
+                                    <p><i class="fa fa-calendar-alt"></i><i>25 - 29 November 2024</p></i>
+                                    <p><i class="far fa-clock"></i><i>10:00 - 13:00</p></i>
+                                    <p><i class="fa fa-map-marker-alt"></i><i>Ndumo Game <br> Reserve,KZN</p></i>
                                 </div>
                                 <div class="event-text">
                                     <h3>Ndumo Community Visit</h3>
@@ -607,9 +607,9 @@
                             <img src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/tshwane fm.jpg" alt="Image">
                             <div class="event-content">
                                 <div class="event-meta">
-                                    <p><i class="fa fa-calendar-alt"></i>5 September 2024</p>
-                                    <p><i class="far fa-clock"></i>18:00</p>
-                                    <p><i class="fa fa-map-marker-alt"></i>Tshwane FM</p>
+                                    <p><i class="fa fa-calendar-alt"></i><i>5 September 2024</p></i>
+                                    <p><i class="far fa-clock"></i><i>18:00</p></i>
+                                    <p><i class="fa fa-map-marker-alt"></i><i>Tshwane FM</p></i>
                                 </div>
                                 <div class="event-text">
                                     <h3>Tshwane FM Interview</h3>
