--- a/index.html
+++ b/index.html
@@ -569,10 +569,9 @@
                             <div class="event-content">
                                 <div class="event-meta">
                                     <p><i class="fa fa-calendar-alt"></i><i>18 - 20 October 2024</p></i>
-                                    <p><i class="far fa-clock"></i><i>08:00 - 14:00</p></i>
-                                    <p><i class="fa fa-map-marker-alt"></i><i>TB Hall (TUT 
-                                         Pretoria <br>west Campus)</p></i>
+                                    <p><i class="far fa-clock"></i><i>08:00 - 14:00</p></i>                                   
                                 </div>
+                                <p><i class="fa fa-map-marker-alt"></i><i> TB Hall (TUT Pretoria <br>west Campus)</p></i>
                                 <div class="event-text">
                                     <h3>Intervarsity Hackathon Series</h3>
                                     <p>
@@ -589,8 +588,9 @@
                                 <div class="event-meta">
                                     <p><i class="fa fa-calendar-alt"></i><i>25 - 29 November 2024</p></i>
                                     <p><i class="far fa-clock"></i><i>10:00 - 13:00</p></i>
-                                    <p><i class="fa fa-map-marker-alt"></i><i>Ndumo Game <br> Reserve,KZN</p></i>
+
                                 </div>
+                                <p><i class="fa fa-map-marker-alt"></i><i> Ndumo Game <br> Reserve,KZN</p></i>
                                 <div class="event-text">
                                     <h3>Ndumo Community Visit</h3>
                                     <p>
@@ -602,7 +602,7 @@
                     </div>
                     
 
-                    <div class="col-lg-6">
+                    <!-- <div class="col-lg-6">
                         <div class="event-item">
                             <img src="https://s3.eu-west-1.amazonaws.com/20from20.org/img/tshwane fm.jpg" alt="Image">
                             <div class="event-content">
@@ -619,7 +619,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
                     
                 </div>
