Fixed mogau's name

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 
 <!--Sponsor Button Start-->
 <div style="text-align: center; margin-top: 1cm;" >
-    <a href="img/Donor wall.pdf" class="nav-item nav-link sponsor-button"><span style=" color: white; ">View Sponsors</span></a>
+    <a href="img/DONOR wall1.pdf" class="nav-item nav-link sponsor-button"><span style=" color: white; ">View Sponsors</span></a>
 </div>
 <!--Sponsor Button Start-->
 
