--- a/team.html
+++ b/team.html
@@ -171,7 +171,8 @@
                         </div>
                         <div class="team-text">
                             <h2>Phaphama Tshisikhawe</h2>
-                            <p>Strategic Advisor<br>Spokesperson of the University</p>
+                            <p>Strategic Advisor</p>
+                         <p> Spokesperson of the University</p>
                         </div>
                     </div>
                 </div> 
