--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                         <div class="facts-item">
                             <i class="flaticon-donation"></i>
                             <div class="facts-text">
-                                <h3 class="facts-dollar" data-toggle="counter-up">0</h3>
+                                <h3 class="facts-dollar" data-toggle="counter-up">60,000</h3>
                                 <p>Raised This Week</p>
                             </div>
                         </div>
@@ -194,7 +194,7 @@
                         <div class="facts-item">
                             <i class="flaticon-donation"></i>
                             <div class="facts-text">
-                                <h3 class="facts-dollar" data-toggle="counter-up">60 000</h3>
+                                <h3 class="facts-dollar" data-toggle="counter-up">60,000</h3>
                                 <p>Raised</p>
                             </div>
                         </div>
@@ -203,7 +203,7 @@
                         <div class="facts-item">
                             <i class="flaticon-kindness"></i>
                             <div class="facts-text">
-                                <h3 class="facts-dollar" data-toggle="counter-up">1,200000</h3>
+                                <h3 class="facts-dollar" data-toggle="counter-up">1,200,000 </h3>
                                 <p>Our Goal</p>
                             </div>
                         </div>
@@ -212,8 +212,8 @@
                         <div class="facts-item">
                             <i class="flaticon-charity"></i>
                             <div class="facts-text">
-                                <h3 class="" data-toggle="counter-up">60</h3>
-                                <p>Donors</p>
+                                <h3 class="" data-toggle="counter-up">1</h3>
+                                <p>Donor</p>
                             </div>
                         </div>
                     </div>
